@@ -13,28 +13,23 @@ import javafx.scene.control.cell.PropertyValueFactory;
 import javafx.stage.FileChooser;
 import javafx.stage.Stage;
 import me.ghosthacks96.applocker.utils.LockedItem;
-import me.ghosthacks96.applocker.utils.ServiceController;
 
 import java.io.File;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import static me.ghosthacks96.applocker.Main.*;
+import static me.ghosthacks96.applocker.Main.logger;
+import static me.ghosthacks96.applocker.Main.saveConfig;
 
 public class homeGUI {
 
     private static ObservableList<LockedItem> folderItems = FXCollections.observableArrayList();
     private static ObservableList<LockedItem> programItems = FXCollections.observableArrayList();
+
     @FXML
     private Button startServiceButton;
     @FXML
     private Button stopServiceButton;
-    @FXML
-    private Button addProgramButton;
-    @FXML
-    private Button removeProgramButton; // Button to remove programs
-    @FXML
-    private Button removeFolderButton; // Button to remove folders
     @FXML
     private Label lockStatus;
     @FXML
@@ -57,175 +52,149 @@ public class homeGUI {
     private TableColumn<LockedItem, String> programPathColumn;
 
     public static void refreshTableData() {
-        folderItems.setAll(lockedItems.stream()
+        logger.logInfo("Refreshing table data.");
+        folderItems.setAll(Main.lockedItems.stream()
                 .filter(item -> !item.getPath().endsWith(".exe"))
                 .collect(Collectors.toList()));
 
-        programItems.setAll(lockedItems.stream()
+        programItems.setAll(Main.lockedItems.stream()
                 .filter(item -> item.getPath().endsWith(".exe"))
                 .collect(Collectors.toList()));
     }
 
     @FXML
     public void initialize() {
-        // Disable row selection for folderTable and programTable
+        logger.logInfo("Initializing homeGUI.");
+
+        // Disable row selection for tables
         folderTable.setSelectionModel(null);
         programTable.setSelectionModel(null);
 
-        // Set up folder checkboxes
+        // Folder table setup
         folderCheckBox.setCellValueFactory(cellData -> cellData.getValue().isSelectedProperty());
         folderCheckBox.setCellFactory(column -> {
             CheckBoxTableCell<LockedItem, Boolean> checkBoxCell = new CheckBoxTableCell<>();
-            checkBoxCell.setEditable(true); // Allow checkboxes to be editable
+            checkBoxCell.setEditable(true);
             return checkBoxCell;
         });
 
-        // Bind folder name to 'name' property
         folderNameColumn.setCellValueFactory(new PropertyValueFactory<>("name"));
-
-        // Bind folder path to 'path' property
         folderPathColumn.setCellValueFactory(new PropertyValueFactory<>("path"));
-
-        // Bind folder status to 'isLocked' property
         folderStatusColumn.setCellValueFactory(cellData -> cellData.getValue().isLockedProperty());
-
-        // Allow editing of folderTable
         folderTable.setEditable(true);
 
-        folderItems.forEach(item -> {
-            item.isSelectedProperty().addListener((observable, oldValue, newValue) -> {
-                onSelectionChanged(item, newValue);
-            });
-        });
-
+        // Program table setup
         programCheckBox.setCellValueFactory(cellData -> cellData.getValue().isSelectedProperty());
         programCheckBox.setCellFactory(column -> {
             CheckBoxTableCell<LockedItem, Boolean> checkBoxCell = new CheckBoxTableCell<>();
-            checkBoxCell.setEditable(true); // Allow checkboxes to be editable
+            checkBoxCell.setEditable(true);
             return checkBoxCell;
         });
 
-        // Bind program name to 'name' property
         programPathColumn.setCellValueFactory(new PropertyValueFactory<>("name"));
-
-        // Bind program status to 'isLocked' property
         programActionColumn.setCellValueFactory(cellData -> cellData.getValue().isLockedProperty());
-
-        // Allow editing of programTable
         programTable.setEditable(true);
 
+        // Populate initial data
+        refreshTableData();
+        folderTable.setItems(folderItems);
+        programTable.setItems(programItems);
 
-        // Initialize and bind data for folder and program tables
-        folderItems = FXCollections.observableArrayList(
-                lockedItems.stream().filter(item -> !item.getPath().endsWith(".exe")).toList()
-        );
-        programItems = FXCollections.observableArrayList(
-                lockedItems.stream().filter(item -> item.getPath().endsWith(".exe")).toList()
-        );
+        // Update UI
 
-        folderTable.setItems(folderItems); // Set items for folder table
-        programTable.setItems(programItems); // Set items for program table
+        updateServiceStatus(Main.sc.isServiceRunning());
 
-        // Update the UI based on service status
-        boolean isRunning = ServiceController.isServiceRunning();
-        updateServiceStatus(isRunning);
     }
 
     @FXML
     private void addFolder() {
-        javafx.stage.DirectoryChooser directoryChooser = new javafx.stage.DirectoryChooser();
-        directoryChooser.setTitle("Select Folder to Lock");
-
-        File selectedDirectory = directoryChooser.showDialog(new Stage());
+        logger.logInfo("Adding a folder to be locked.");
+        File selectedDirectory = new javafx.stage.DirectoryChooser().showDialog(new Stage());
         if (selectedDirectory != null) {
-            LockedItem lockedFolder = new LockedItem(
-                    selectedDirectory.getAbsolutePath(),
-                    selectedDirectory.getName(),
-                    true
-            );
-            lockedItems.add(lockedFolder);
-            saveConfig(); // Save changes to the configuration
-            refreshTableData(); // Refresh tables to include new data
+            LockedItem lockedFolder = new LockedItem(selectedDirectory.getAbsolutePath(), selectedDirectory.getName(), true);
+            Main.lockedItems.add(lockedFolder);
+            saveConfig();
+            refreshTableData();
+            logger.logInfo("Added folder: " + selectedDirectory.getName());
+        } else {
+            logger.logWarning("No folder was selected to add.");
         }
     }
 
     @FXML
     private void removeFolder() {
-        // Get selected folders
-        List<LockedItem> selectedFolders = folderItems.stream()
-                .filter(LockedItem::isSelected)
-                .collect(Collectors.toList());
-
-        // Remove selected folders from `lockedItems` and the folderItems list
-        lockedItems.removeAll(selectedFolders);
-        folderItems.removeAll(selectedFolders);
-
-        saveConfig(); // Save the updated configuration
-        refreshTableData(); // Refresh table display
+        logger.logInfo("Removing selected folders.");
+        List<LockedItem> selectedFolders = folderItems.stream().filter(LockedItem::isSelected).toList();
+        Main.lockedItems.removeAll(selectedFolders);
+        saveConfig();
+        refreshTableData();
+        selectedFolders.forEach(item -> logger.logInfo("Removed folder: " + item.getName()));
     }
 
     @FXML
     private void addProgram() {
+        logger.logInfo("Adding a program to be locked.");
         FileChooser fileChooser = new FileChooser();
         fileChooser.setTitle("Select Program to Lock");
         fileChooser.getExtensionFilters().add(new FileChooser.ExtensionFilter("Executable Files", "*.exe"));
-
         File selectedFile = fileChooser.showOpenDialog(new Stage());
         if (selectedFile != null) {
-            LockedItem lockedProgram = new LockedItem(
-                    selectedFile.getAbsolutePath(),
-                    selectedFile.getName(),
-                    true
-            );
-            lockedItems.add(lockedProgram);
-            saveConfig(); // Save changes to the configuration
-            refreshTableData(); // Refresh tables to include new data
+            LockedItem lockedProgram = new LockedItem(selectedFile.getAbsolutePath(), selectedFile.getName(), true);
+            Main.lockedItems.add(lockedProgram);
+            saveConfig();
+            refreshTableData();
+            logger.logInfo("Added program: " + selectedFile.getName());
+        } else {
+            logger.logWarning("No program was selected to add.");
         }
     }
 
     @FXML
     private void removeProgram() {
-        // Get selected programs
-        List<LockedItem> selectedPrograms = programItems.stream()
-                .filter(LockedItem::isSelected)
-                .collect(Collectors.toList());
-
-        // Remove selected programs from `lockedItems` and the programItems list
-        lockedItems.removeAll(selectedPrograms);
-        programItems.removeAll(selectedPrograms);
-
-        saveConfig(); // Save the updated configuration
-        refreshTableData(); // Refresh table display
+        logger.logInfo("Removing selected programs.");
+        List<LockedItem> selectedPrograms = programItems.stream().filter(LockedItem::isSelected).toList();
+        Main.lockedItems.removeAll(selectedPrograms);
+        saveConfig();
+        refreshTableData();
+        selectedPrograms.forEach(item -> logger.logInfo("Removed program: " + item.getName()));
     }
 
     @FXML
     public void startService() {
-        ServiceController.startService();
-        if(!config.get("mode").getAsString().equals("lock")){
-            config.remove("mode");
-            config.addProperty("mode", "lock");
+
+        logger.logInfo("Starting locking service.");
+        if (Main.config.get("mode").getAsString().equals("unlock")) {
+            Main.config.remove("mode");
+            Main.config.addProperty("mode", "lock");
         }
         saveConfig();
         Platform.runLater(() -> updateServiceStatus(true));
+        logger.logInfo("Locking service started.");
     }
 
     @FXML
     public void stopService() {
-        ServiceController.stopService();
-        if(!config.get("mode").getAsString().equals("lock")){
-            config.remove("mode");
-            config.addProperty("mode", "unlock");
+        logger.logInfo("Stopping locking service.");
+        if (Main.config.get("mode").getAsString().equals("lock")) {
+            Main.config.remove("mode");
+            Main.config.addProperty("mode", "unlock");
         }
         saveConfig();
         Platform.runLater(() -> updateServiceStatus(false));
+        logger.logInfo("Locking service stopped.");
     }
 
-    private void updateServiceStatus(boolean isRunning) {
+
+    public void updateServiceStatus(boolean isRunning) {
+        logger.logInfo("Updating service status to " + (isRunning ? "RUNNING" : "STOPPED"));
         if (isRunning) {
             startServiceButton.setDisable(true);
             stopServiceButton.setDisable(false);
             lockStatus.setText("Locking Engaged");
             lockStatus.setTextFill(javafx.scene.paint.Color.GREEN);
+            if (!Main.sc.isServiceRunning()) {
+                Main.sc.startBlockerDaemon();
+            }
         } else {
             startServiceButton.setDisable(false);
             stopServiceButton.setDisable(true);
@@ -236,46 +205,25 @@ public class homeGUI {
 
     @FXML
     private void swapFLockStatus() {
-        // Get selected folders
-        List<LockedItem> selectedFolders = folderItems.stream()
-                .filter(LockedItem::isSelected) // Filters items where the checkbox is selected
-                .collect(Collectors.toList());
-
-        // Toggle the lock status for each selected folder
-        selectedFolders.forEach(item -> {
+        logger.logInfo("Toggling lock status for selected folders.");
+        folderItems.stream().filter(LockedItem::isSelected).forEach(item -> {
             item.setLocked(!item.isLocked());
             item.setSelected(false);
-            System.out.println("NAME: " + item.getName() + " locked status: " + item.isLocked());
-        }); // Switch isLocked value
-
-
-        // Save the updated configuration and refresh the table
+            logger.logInfo("Toggled lock status for folder: " + item.getName());
+        });
         saveConfig();
         refreshTableData();
     }
 
     @FXML
     private void swapPLockStatus() {
-        // Get selected programs
-        List<LockedItem> selectedPrograms = programItems.stream()
-                .filter(LockedItem::isSelected) // Filters items where the checkbox is selected
-                .collect(Collectors.toList());
-
-        // Toggle the lock status for each selected program
-        selectedPrograms.forEach(item -> {
+        logger.logInfo("Toggling lock status for selected programs.");
+        programItems.stream().filter(LockedItem::isSelected).forEach(item -> {
             item.setLocked(!item.isLocked());
             item.setSelected(false);
-            System.out.println("NAME: " + item.getName() + " locked status: " + item.isLocked());
-        }); // Switch isLocked value
-
-        // Save the updated configuration and refresh the table
+            logger.logInfo("Toggled lock status for program: " + item.getName());
+        });
         saveConfig();
         refreshTableData();
     }
-
-    private void onSelectionChanged(LockedItem item, boolean isSelected) {
-        item.setSelected(isSelected);
-    }
-
-
 }
